[project]
name = "index-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "torch",
  "torchvision",
  "torchaudio",
  "accelerate==0.25.0",
  "transformers==4.36.2",
  "tokenizers==0.15.0",
  "cn2an==0.5.22",
  "ffmpeg-python==0.2.0",
  "Cython==3.0.7",
  "g2p-en==2.1.0",
  "jieba==0.42.1",
  "keras==2.9.0",
  "numba>=0.58.1",
  "numpy==1.26.2",
  "pandas==2.1.3",
  "matplotlib==3.8.2",
  "opencv-python==4.9.0.80",
  "vocos==0.1.0",
  "accelerate==0.25.0",
  "tensorboard==2.9.1",
  "omegaconf",
  "sentencepiece",
  "librosa",
  "gradio",
  "tqdm",
  "wetext>=0.0.4",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cu124" },
]
torchvision = [
    { index = "pytorch-cu124" },
]
torchaudio = [
    { index = "pytorch-cu124" },
]

[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple/"
default = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
