[project]
name = "index-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "torch",
  "torchvision",
  "torchaudio",
  "accelerate",
  "transformers",
  "tokenizers",
  "cn2an",
  "ffmpeg-python",
  "Cython",
  "g2p-en",
  "jieba",
  "keras",
  "numba",
  "numpy",
  "pandas",
  "matplotlib",
  "opencv-python",
  "vocos",
  "tensorboard",
  "omegaconf",
  "sentencepiece",
  "librosa",
  "gradio",
  "tqdm",
  "wetext>=0.0.4",
  "fastapi",
  "uvicorn",
  "pyyaml",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cu124" },
]
torchvision = [
    { index = "pytorch-cu124" },
]
torchaudio = [
    { index = "pytorch-cu124" },
]

[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple/"
default = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
